Specify go import path in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
+go_import_path: github.com/audisto/data-downloader
 language: go
 go:
   - 1.8
   - 1.9
   - tip
+
 install:
   - make dependency
   # A workaround for 1.8 package install issues
