include go generate in the .air.conf file (for web dev live reloads)

--- a/.air.conf
+++ b/.air.conf
@@ -7,7 +7,7 @@ tmp_dir = ".tmp"
 
 [build]
 bin = ".tmp/data-downloader web -P=5051"
-cmd = "go build -o .tmp/data-downloader"
+cmd = "go generate && go build -o .tmp/data-downloader"
 log = "server-errors.log" # this log file places in your tmp_dir
 include_ext = ["go", "tpl", "tmpl", "html"]
 exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
