--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ go:
   - tip
 
 install:
-  - make dependency
+  - make ensure-dependency
   # A workaround for 1.8 package install issues
   - if [ "$TRAVIS_GO_VERSION" = "1.8" ]; then go install; fi
 
