--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - go get -u github.com/rakyll/statik
   - make ensure-dependency
   # A workaround for 1.8 package install issues
-  - if [ "$TRAVIS_GO_VERSION" = "1.8" ]; then go install; fi
+  - if [ "$TRAVIS_GO_VERSION" = "1.8" ]; then make install; fi
 
 script:
   - make test
