Adjust .air.conf, make it use the new Makefile

--- a/.air.conf
+++ b/.air.conf
@@ -3,15 +3,14 @@
 # working directory
 root = "." # . or absolute path, please note that the directories following must be under root
 # watch_dir = "" # optional, if no watch_dir, use root
-tmp_dir = ".tmp"
 
 [build]
-bin = ".tmp/data-downloader web -P=5051"
-cmd = "go generate && go build -o .tmp/data-downloader"
+bin = "./bin/audisto-cli-dev web -P=5051"
+cmd = "make build"
 log = "server-errors.log" # this log file places in your tmp_dir
 include_ext = ["go", "tpl", "tmpl", "html"]
-exclude_dir = ["assets", "tmp", "vendor", "frontend/node_modules"]
-delay = 800 # ms
+exclude_dir = ["bin", "data", "vendor", "web/statik"]
+delay = 500 # ms
 
 [color]
 main = "magenta"
