Include .js files in air watch extensions

--- a/.air.conf
+++ b/.air.conf
@@ -8,7 +8,7 @@ root = "." # . or absolute path, please note that the directories following must
 bin = "./bin/audisto-cli-dev web -P=5051"
 cmd = "make build"
 log = "server-errors.log" # this log file places in your tmp_dir
-include_ext = ["go", "tpl", "tmpl", "html"]
+include_ext = ["go", "tpl", "tmpl", "html", "js"]
 exclude_dir = ["bin", "data", "vendor", "web/statik"]
 delay = 500 # ms
 
