--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -46,3 +46,11 @@ required = ["github.com/rakyll/statik"]
 [[constraint]]
   name = "github.com/gin-gonic/gin"
   version = "1.2.0"
+
+[[constraint]]
+  name = "gopkg.in/olahol/melody.v1"
+  version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/mitchellh/go-homedir"
