--- a/.air.conf
+++ b/.air.conf
@@ -5,7 +5,7 @@ root = "." # . or absolute path, please note that the directories following must
 # watch_dir = "" # optional, if no watch_dir, use root
 
 [build]
-bin = "${PWD}/bin/audisto-cli-dev web"
+bin = "${PWD}/bin/data-downloader-dev web"
 cmd = "make build"
 log = "server-errors.log" # this log file places in your tmp_dir
 include_ext = ["go", "tpl", "tmpl", "html", "js"]
